welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:23: error: unclosed comment
/*override def run() {ligne();deplacement();ligne();deplacement();ligne();deplacement()
^MethodsPictureLarge:2: error: Missing closing brace `}' assumed here
override def run() {ligne();deplacement();ligne();deplacement();ligne();deplacement()
^MethodsPictureLarge:2: error: expected start of definition
override def run() {ligne();deplacement();ligne();deplacement();ligne();deplacement()
         ^MethodsPictureLarge:5: error: expected class or object definition
def faireV(d: Color){
^MethodsPictureLarge:9: error: expected class or object definition
def ensemble(){
^MethodsPictureLarge:12: error: expected class or object definition
def ligne(){
^MethodsPictureLarge:17: error: expected class or object definition
def deplacement(){gauche();avance(5);droite()
^